--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "backend": "file:",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
@@ -21,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mogoose": "^0.0.1-security",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.6.0"
+    "mongoose": "^8.6.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -30,6 +32,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
