--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "mogoose": "^0.0.1-security",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^16.12.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
