--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,12 +3,8 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.ts",
+        "src": "index.js",
         "use": "@vercel/node"
-      },
-      {
-        "src": "src/**/*",
-        "use": "@vercel/static"
       }
     ],
     "routes": [
