--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,12 @@
 {
-    "installCommand": "npm install --legacy-peer-deps",
-    "version": 2,
+    "version":2,
     "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
-      }
+      { "src": "*.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
+        {
+          "src": "/(.*)",
+          "dest": "/"
+        }
     ]
   }
